# zavora-trading-engine

./: .env.example  .env.test  .gitignore  ACCOUNT_SERVICE_README.md  API_GATEWAY_README.md  Cargo.toml  DATABASE_CHEATSHEET.md  Dockerfile  MARKET_DATA_README.md  MATCHING_ENGINE_README.md  README.md  RELEASE_NOTES.md  TESTING_DB.md  TRADING_ENGINE_README.md  api_test.sh  create_test_db.sh  docker-compose.yml  package-lock.json  test_api.sh  ws_test.js
.sqlx/: query-1234567890abcdef.json  query-9876543210fedcba.json  query-abcdef1234567890.json
account-service/: Cargo.toml  README.md
account-service/src/: config.rs  lib.rs  repository.rs  service.rs
account-service/tests/: account_postgres_tests.rs  in_memory_tests.rs  minimal_test.rs  service_tests.rs
api-gateway/: Cargo.toml  README.md
api-gateway/src/: config.rs  error.rs  lib.rs  main.rs
api-gateway/src/api/: account.rs  market.rs  mod.rs  order.rs  response.rs
api-gateway/src/ws/: handler.rs  message.rs  mod.rs
common/: Cargo.toml
common/src/: lib.rs
common/src/db/: mod.rs  models.rs  queries.rs  transaction.rs
common/src/decimal/: mod.rs
common/src/error/: mod.rs
common/src/model/: mod.rs
common/src/model/account/: mod.rs
common/src/model/market/: mod.rs
common/src/model/order/: mod.rs
common/src/model/trade/: mod.rs
deploy/: DEPLOYMENT.md  README.md
deploy/k8s/: namespace.yaml  secrets.yaml  trading-engine.yaml
deploy/k8s/base/: account-service.yaml  api-gateway.yaml  kustomization.yaml  market-data.yaml  matching-engine.yaml  namespace.yaml  postgres.yaml  redis.yaml  trading-engine.yaml
deploy/scripts/: build_and_push.sh  create_github_release.sh  deploy.sh
deploy/terraform/aws/: main.tf  outputs.tf  terraform.tfvars  variables.tf
deploy/terraform/gcp/: main.tf  outputs.tf  variables.tf
market-data/: Cargo.toml  README.md
market-data/src/: channel.rs  lib.rs  models.rs  service.rs
market-data/src/repository/: mod.rs  postgres.rs
market-data/tests/: service_tests.rs
matching-engine/: Cargo.toml  README.md
matching-engine/src/: engine.rs  lib.rs  order_book.rs
matching-engine/tests/: engine_tests.rs
migrations/: 20240227000000_initial_schema.sql
src/: lib.rs  main.rs
tests/: db_tests.rs  integration_tests.rs  test_helpers.rs
trading-engine/: Cargo.toml
trading-engine/src/: main.rs
