[package]
name = "account-service"
version = "0.1.0"
edition = "2021"

[dependencies]
common = { path = "../common" }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
rust_decimal = { workspace = true }
rust_decimal_macros = { workspace = true }
tokio = { workspace = true }
thiserror = { workspace = true }
dashmap = "5.5.3"  # Concurrent HashMap for thread-safe access
async-trait = "0.1.77"